Add abilities for hero
