# api/controllers/hero.py
@@ -1,6 +1,8 @@
+import ast
+
 from flask import jsonify, abort, request
 
-from api.models.hero import Hero
+from api.models.hero import Hero, Ability, hero_abilities
 from api.schemes.hero import heroes_schema, hero_schema, abilities_schema
 from api.utils import get_or_create
 
@@ -12,13 +14,16 @@ class HeroController:
         self.db = db
 
     def heroes_list(self):
-        if request.args:
-            heroes = Hero.query
-            for query_param, value in request.args.items():
-                heroes = heroes.filter(getattr(Hero, query_param).contains(value))
-            return {'data': heroes_schema.dump(heroes), 'totalItems':len(heroes.all())}
-        heroes = Hero.query.all()
-        return {'data': heroes_schema.dump(heroes), 'totalItems':len(heroes)}
+        name = request.args.get('name')
+        abilities = ast.literal_eval(request.args.get('ability', '[]'))
+        heroes = Hero.query
+        if abilities:
+            heroes = self.db.session.query(Hero)\
+                .join(Hero.ability)\
+                .filter(Ability.title.in_(abilities))
+        if name:
+            heroes = heroes.filter(Hero.name.contains(name))
+        return {'data': heroes_schema.dump(heroes), 'totalItems': len(heroes.all())}
 
     def hero_detail(self, hero_id: int):
         hero = Hero.query.get(hero_id)
@@ -30,7 +35,17 @@ class HeroController:
         if 'name' not in request.json:
             abort(400)
 
-        hero = get_or_create(self.db.session, Hero, name=request.json.get('name'))
+        hero = get_or_create(self.db.session, Hero,
+                             name=request.json.get('name'))
+
+        for ability in request.json.get('ability'):
+            ability_obj = get_or_create(self.db.session, Ability,
+                                           title=ability.get('title'))
+            abilities_for_hero = hero_abilities.insert()\
+                .values(hero_id=hero.id, ability_id=ability_obj.id)
+            self.db.session.execute(abilities_for_hero)
+
+        self.db.session.commit()
         return hero_schema.dump(hero), 201
 
     def delete_hero(self, hero_id: int):
@@ -53,5 +68,5 @@ class HeroController:
         return hero_schema.dump(hero)
 
     def abilities_list(self):
-         abilities = Hero.query.distinct(Hero.ability)
-         return abilities_schema.dump(abilities)
+        abilities = Ability.query.all()
+        return abilities_schema.dump(abilities)
